--- a/ProjektLab/Polinom.xaml
+++ b/ProjektLab/Polinom.xaml
@@ -7,7 +7,8 @@
              d:DesignHeight="450" d:DesignWidth="800" Background="White">
     <Grid HorizontalAlignment="Left" VerticalAlignment="Top" Width="800">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="409*"></ColumnDefinition>
+            <ColumnDefinition Width="344*"></ColumnDefinition>
+            <ColumnDefinition Width="65*"></ColumnDefinition>
             <ColumnDefinition Width="65*"></ColumnDefinition>
             <ColumnDefinition Width="65*"></ColumnDefinition>
             <ColumnDefinition Width="65*"></ColumnDefinition>
@@ -32,49 +33,60 @@
         <Separator Grid.Row="1" Grid.ColumnSpan="6"></Separator>
         <TextBlock Text="Vizsgálandó polinom" Grid.Row="2"></TextBlock>
         <TextBlock Name="tbkPol1" Grid.Row="3" Grid.Column="0"></TextBlock>
-        <Button Content="Z[x]" Grid.Column="1" Grid.Row="3" Name="btnPol" Click="btnPol_Click" FontFamily="Times New Roman" FontSize="22" FontStyle="Italic"></Button>
-        <Button Content="CE" Grid.Column="2" Grid.Row="3" FontFamily="Times New Roman" FontSize="22"></Button>
-        <Button Content="C" Grid.Column="3" Grid.Row="3" FontFamily="Times New Roman" FontSize="22"></Button>
-        <Button Content="BKSP" Grid.Column="4" Grid.Row="3" FontFamily="Times New Roman" FontSize="22"></Button>
-        <Button Content="/" Grid.Column="5" Grid.Row="3" FontFamily="Times New Roman" FontSize="22"></Button>
-        <Button Content="x" Grid.Column="1" Grid.Row="4" HorizontalAlignment="Left" Width="76" Click="btn_Click" FontFamily="Palatino Linotype" FontStyle="Italic" FontSize="22"/>
-        <Button Content="9" Grid.Column="2" Grid.Row="4" Name="btn_9" Click="btn_Click" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic"></Button>
-        <Button Content="8" Grid.Column="3" Grid.Row="4" Name="btn_8" Click="btn_Click" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic"></Button>
-        <Button Content="7" Grid.Column="4" Grid.Row="4" Name="btn_7" Click="btn_Click" FontFamily="Palatino Linotype" FontSize="22"></Button>
-        <Button Content="*" Grid.Column="5" Grid.Row="4" FontFamily="Palatino Linotype" FontSize="22" ></Button>
+        <Button Grid.Column="1" Grid.Row="3" Name="btnClipboard" Click="btnclipBoard_Click">
+            <StackPanel>
+                <Image Source="clipboard.png"></Image>
+            </StackPanel>
+        </Button>
+        <Button Content="Z[x]" Grid.Column="2" Grid.Row="3" Name="btnPol" Click="btnPol_Click" FontFamily="Times New Roman" FontSize="22" FontStyle="Italic"></Button>
+        <Button Content="CE" Grid.Column="3" Grid.Row="3" FontFamily="Times New Roman" FontSize="22"></Button>
+        <Button Content="C" Grid.Column="4" Grid.Row="3" FontFamily="Times New Roman" FontSize="22"></Button>
+        <Button Content="BKSP" Grid.Column="5" Grid.Row="3" FontFamily="Times New Roman" FontSize="22"></Button>
+        <Button Content="/" Grid.Column="6" Grid.Row="3" FontFamily="Times New Roman" FontSize="22"></Button>
+        <Button Grid.Column="1" Grid.Row="4" Name="btnOpen" Click="btnOpen_Click">
+            <StackPanel>
+                <Image Source="open-archive.png"></Image>
+            </StackPanel>
+        </Button>
+        <Button Content="x" Grid.Column="2" Grid.Row="4" HorizontalAlignment="Left" Width="71" Click="btn_Click" FontFamily="Palatino Linotype" FontStyle="Italic" FontSize="22"/>
+        <Button Content="9" Grid.Column="3" Grid.Row="4" Name="btn_9" Click="btn_Click" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic"></Button>
+        <Button Content="8" Grid.Column="4" Grid.Row="4" Name="btn_8" Click="btn_Click" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic"></Button>
+        <Button Content="7" Grid.Column="5" Grid.Row="4" Name="btn_7" Click="btn_Click" FontFamily="Palatino Linotype" FontSize="22"></Button>
+        <Button Content="*" Grid.Column="6" Grid.Row="4" FontFamily="Palatino Linotype" FontSize="22" ></Button>
         <TextBlock Name="tbkOperation" Grid.Column="0" Grid.Row="5" />
-        <Button Grid.Column="1" Grid.Row="5" Click="Button_Click_1">
+        <Button Content="mod" Grid.Column="1" Grid.Row="5" FontFamily="Palatino Linotype" FontStyle="Italic" FontSize="22" ></Button>
+        <Button Grid.Column="2" Grid.Row="5" Click="Button_Click_square">
             <TextBlock FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic">
             <Run>x</Run>
             <Run Typography.Variants="Superscript">2</Run>
             </TextBlock>
         </Button>
-        <Button Content="6" Grid.Column="2" Grid.Row="5" Click="btn_Click" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic"></Button>
-        <Button Content="5" Grid.Column="3" Grid.Row="5" Click="btn_Click" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic"></Button>
-        <Button Content="4" Grid.Column="4" Grid.Row="5" Click="btn_Click" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic"></Button>
-        <Button Content="-" Grid.Column="5" Grid.Row="5" Click="btn_Click" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic"></Button>
+        <Button Content="6" Grid.Column="3" Grid.Row="5" Click="btn_Click" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic"></Button>
+        <Button Content="5" Grid.Column="4" Grid.Row="5" Click="btn_Click" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic"></Button>
+        <Button Content="4" Grid.Column="5" Grid.Row="5" Click="btn_Click" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic"></Button>
+        <Button Content="-" Grid.Column="6" Grid.Row="5" Click="btn_Click" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic"></Button>
 
-        <Button Grid.Column="1" Grid.Row="6" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic">
+        <Button Grid.Column="2" Grid.Row="6" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic" Click="Button_Click_Cube">
             <TextBlock FontFamily="Palatino Linotype">
             <Run>x</Run>
             <Run Typography.Variants="Superscript">3</Run>
             </TextBlock>
         </Button>
-        <Button Content="3" Grid.Column="2" Grid.Row="6" Click="btn_Click" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic"></Button>
-        <Button Content="2" Grid.Column="3" Grid.Row="6" Click="btn_Click" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic"></Button>
-        <Button Content="1" Grid.Column="4" Grid.Row="6" Click="btn_Click" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic"></Button>
-        <Button Content="+" Grid.Column="5" Grid.Row="6" Click="btn_Click" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic"/>
+        <Button Content="3" Grid.Column="3" Grid.Row="6" Click="btn_Click" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic"></Button>
+        <Button Content="2" Grid.Column="4" Grid.Row="6" Click="btn_Click" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic"></Button>
+        <Button Content="1" Grid.Column="5" Grid.Row="6" Click="btn_Click" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic"></Button>
+        <Button Content="+" Grid.Column="6" Grid.Row="6" Click="btn_Click" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic"/>
 
-        <Button Grid.Column="1" Grid.Row="7" Click="Button_Click" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic">
+        <Button Grid.Column="2" Grid.Row="7" Click="Button_Click" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic">
             <TextBlock FontFamily="Palatino Linotype">
             <Run>x</Run>
             <Run Typography.Variants="Superscript">y</Run>
             </TextBlock>
         </Button>
-        <Button Content="+/-" Grid.Column="2" Grid.Row="7" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic"></Button>
-        <Button Content="0" Grid.Column="3" Grid.Row="7" Click="btn_Click" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic"></Button>
-        <Button Content="," Grid.Column="4" Grid.Row="7" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic"></Button>
-        <Button Content="=" Grid.Column="5" Grid.Row="7" Click="equal_Click" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic"></Button>
+        <Button Content="+/-" Grid.Column="3" Grid.Row="7" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic"></Button>
+        <Button Content="0" Grid.Column="4" Grid.Row="7" Click="btn_Click" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic"></Button>
+        <Button Content="," Grid.Column="5" Grid.Row="7" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic"></Button>
+        <Button Content="=" Grid.Column="6" Grid.Row="7" Click="equal_Click" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic"></Button>
 
 
 
