--- a/ProjektLab/FiniteField.xaml
+++ b/ProjektLab/FiniteField.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:fa="http://schemas.fontawesome.io/icons/"
              xmlns:local="clr-namespace:ProjektLab"
              mc:Ignorable="d" 
              d:DesignHeight="600" d:DesignWidth="800" Width="Auto" Height="Auto" Background="White"
@@ -66,11 +67,16 @@
                     </ControlTemplate>
                 </Validation.ErrorTemplate>
             </TextBox>
-            <Button Grid.Row="2" Content="Irreducibilis polinomok generálása" Grid.ColumnSpan="2"
+            <Button Grid.Row="2" Grid.ColumnSpan="2"
                 Name="Button"
                 IsEnabled="False"
                 Click="buttonClick"
-                ></Button>
+                >
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="Irreducibilis polinomok generálása" VerticalAlignment="Center" />
+                    <fa:FontAwesome Icon="Spinner" Spin="True" Name="ButtonSpinner" Visibility="Hidden"/>
+                </StackPanel>
+            </Button>
             <ComboBox
                 Grid.Row="3"
                 Grid.ColumnSpan="4"
@@ -79,23 +85,28 @@
                 DropDownClosed="polinomDropDownClosed"
                 >
             </ComboBox>
-            <Button Grid.Row="5" Content="Táblázatok generálása" Grid.ColumnSpan="2"
+            <Button Grid.Row="5" Grid.ColumnSpan="2"
                 Name="TableButton"
                 IsEnabled="False"
                 Click="generateTables"
-                ></Button>
+                >
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="Táblázatok generálása" VerticalAlignment="Center" />
+                    <fa:FontAwesome Icon="Spinner" Spin="True" Name="TableButtonSpinner" Visibility="Hidden"/>
+                </StackPanel>
+            </Button>
         </Grid>
-        <Grid HorizontalAlignment="Left" VerticalAlignment="Top" Width="Auto">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1*"/>
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="auto"></RowDefinition>
-                <RowDefinition Height="auto"></RowDefinition>
-            </Grid.RowDefinitions>
-            <StackPanel>
-                <TextBox Name="Testing"></TextBox>
-            </StackPanel>
-        </Grid>
+        <TabControl Visibility="hidden" Width="800" Name="ResultGrid">
+            <TabItem Header="Összeadás" HorizontalAlignment="Center">
+                <DataGrid Name="SummationGrid" FrozenColumnCount="1">
+                    <DataGridTextColumn Header="+"/>
+                </DataGrid>
+            </TabItem>
+            <TabItem Header="Szorzás" HorizontalAlignment="Center">
+                <DataGrid Name="MultiplicationGrid" FrozenColumnCount="1">
+                    <DataGridTextColumn Header="*"/>
+                </DataGrid>
+            </TabItem>
+        </TabControl>
     </StackPanel>
 </UserControl>
