--- a/ProjektLab/FiniteField.xaml
+++ b/ProjektLab/FiniteField.xaml
@@ -6,7 +6,7 @@
              xmlns:fa="http://schemas.fontawesome.io/icons/"
              xmlns:local="clr-namespace:ProjektLab"
              mc:Ignorable="d" 
-             d:DesignHeight="600" d:DesignWidth="1024" Width="Auto" Height="Auto" Background="White"
+             d:DesignHeight="800" d:DesignWidth="1024" Width="Auto" Height="Auto" Background="White"
              >
     <UserControl.Resources>
         <local:PolinomToXamlConverter x:Key="PolinomToXamlConverter" />
@@ -31,9 +31,9 @@
                    Grid.ColumnSpan="2"
                    />
             <Label Content="Prímszám:" Grid.Row="1" HorizontalAlignment="Right"></Label>
-            <TextBox Grid.Column="1" Grid.Row="1" Validation.Error="primeError" Name="primeInput">
+            <TextBox Grid.Column="1" Grid.Row="1" Validation.Error="primeError" Name="primeInput" SourceUpdated="MyOrderSourceUpdated">
                 <TextBox.Text>
-                    <Binding UpdateSourceTrigger="PropertyChanged" Path="MyOrder.Mantissa" NotifyOnValidationError="True">
+                    <Binding UpdateSourceTrigger="PropertyChanged" Path="MyOrder.Mantissa" NotifyOnValidationError="True" NotifyOnSourceUpdated="True">
                         <Binding.ValidationRules>
                             <local:StringToUint64ValidationRule ValidationStep="RawProposedValue" ValidatesOnTargetUpdated="True"/>
                             <local:GreaterThanZeroValidationRule ValidationStep="RawProposedValue" ValidatesOnTargetUpdated="True"/>
@@ -52,9 +52,9 @@
                 </Validation.ErrorTemplate>
             </TextBox>
             <Label Content="Hatványkitevő:" Grid.Column="2" Grid.Row="1" HorizontalAlignment="Right"></Label>
-            <TextBox Grid.Column="3" Grid.Row="1" Validation.Error="powerError" Name="powerInput">
+            <TextBox Grid.Column="3" Grid.Row="1" Validation.Error="powerError" Name="powerInput" SourceUpdated="MyOrderSourceUpdated">
                 <TextBox.Text>
-                    <Binding UpdateSourceTrigger="PropertyChanged" Path="MyOrder.Exponent" NotifyOnValidationError="True">
+                    <Binding UpdateSourceTrigger="PropertyChanged" Path="MyOrder.Exponent" NotifyOnValidationError="True" NotifyOnSourceUpdated="True">
                         <Binding.ValidationRules>
                             <local:StringToUint64ValidationRule ValidationStep="RawProposedValue" ValidatesOnTargetUpdated="True"/>
                             <local:GreaterThanZeroValidationRule ValidationStep="RawProposedValue" ValidatesOnTargetUpdated="True"/>
@@ -71,7 +71,23 @@
                     </ControlTemplate>
                 </Validation.ErrorTemplate>
             </TextBox>
-            <Button Grid.Row="2" Grid.ColumnSpan="2"
+            <Label Content="Irreducibilic polinom:" Grid.Row="2" Grid.Column="0" HorizontalAlignment="Right">
+            </Label>
+            <ComboBox
+                Grid.Row="2"
+                Grid.ColumnSpan="2"
+                Grid.Column="1"
+                Name="polinom"
+                SelectedItem="{Binding IrreduciblePolinom}"
+                DropDownClosed="polinomDropDownClosed"
+                >
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <Label Content="{Binding Converter={StaticResource PolinomToXamlConverter}}"></Label>
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+            </ComboBox>
+            <Button Grid.Row="2" Grid.Column="3" Grid.ColumnSpan="2"
                 Name="Button"
                 IsEnabled="False"
                 Click="buttonClick"
@@ -81,46 +97,44 @@
                     <fa:FontAwesome Icon="Spinner" Spin="True" Name="ButtonSpinner" Visibility="Hidden"/>
                 </StackPanel>
             </Button>
-            <ComboBox
+            <Separator
                 Grid.Row="3"
-                Grid.ColumnSpan="4"
-                Name="polinom"
-                SelectedItem="{Binding IrreduciblePolinom}"
-                DropDownClosed="polinomDropDownClosed"
-                >
-            </ComboBox>
-            <Button Grid.Row="5" Grid.ColumnSpan="2"
+                Grid.ColumnSpan="5"
+                Margin="0,10"
+                />
+            <Button Grid.Row="4" Grid.ColumnSpan="2"
                 Name="TableButton"
                 IsEnabled="False"
                 Click="generateTables"
+                Padding="10,10"
                 >
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="Táblázatok generálása" VerticalAlignment="Center" />
-                    <fa:FontAwesome Icon="Spinner" Spin="True" Name="TableButtonSpinner" Visibility="Hidden"/>
-                </StackPanel>
+                    <fa:FontAwesome Icon="Table" VerticalAlignment="Center"/>
+                    <TextBlock Text="Táblázatok generálása" VerticalAlignment="Center" Padding="5,0,5,0"/>
+                    <fa:FontAwesome Icon="Spinner" Spin="True" Name="TableButtonSpinner" Visibility="Hidden" />                </StackPanel>
             </Button>
             <StackPanel 
                 Orientation="Horizontal"
-                Grid.Row="5"
+                Grid.Row="4"
                 Grid.Column="3"
                 Grid.ColumnSpan="2"
                 >
-                <Button Grid.Row="5" Grid.ColumnSpan="2"
+                <Button
                     Name="SummationTableExport"
                     IsEnabled="False"
                     Click="SummationTableExport_Click"
-                    Padding="10,0"
+                    Padding="10,10"
                 >
                     <StackPanel Orientation="Horizontal">
                         <fa:FontAwesome Icon="Download" Visibility="Visible" VerticalAlignment="Center"/>
                         <TextBlock Text="Összeadás mentése" VerticalAlignment="Center" Padding="5,0,0,0"/>
                     </StackPanel>
                 </Button>
-                <Button Grid.Row="5" Grid.ColumnSpan="2"
+                <Button
                     Name="MultiplicationTableExport"
                     IsEnabled="False"
                     Click="MultiplicationTableExport_Click"
-                        Padding="10,0"
+                        Padding="10,10"
                 >
                     <StackPanel Orientation="Horizontal">
                         <fa:FontAwesome Icon="Download" Visibility="Visible" VerticalAlignment="Center"/>
@@ -129,7 +143,10 @@
                 </Button>
             </StackPanel>
         </Grid>
-        <TabControl Visibility="Hidden" Width="900" Height="400" Name="ResultGrid">
+        <Separator
+                Margin="0,10"
+                />
+        <TabControl Visibility="Hidden" HorizontalAlignment="Stretch" Height="550" Name="ResultGrid">
             <TabItem Header="Összeadás">
                 <DataGrid 
                         Name="SummationGrid" 
@@ -142,12 +159,16 @@
                     <DataGrid.ColumnHeaderStyle>
                         <Style TargetType="Control">
                             <Setter Property="FontWeight" Value="Bold"/>
+                            <Setter Property="VerticalContentAlignment" Value="Bottom"/>
+                            <Setter Property="HorizontalContentAlignment" Value="Center"/>
                         </Style>
                     </DataGrid.ColumnHeaderStyle>
                     <DataGrid.RowHeaderStyle>
                         <Style TargetType="{x:Type DataGridRowHeader}">
                             <Setter Property="Content" Value="{Binding Path=Label, Converter={StaticResource PolinomToXamlConverter}}" />
                             <Setter Property="FontWeight" Value="Bold"/>
+                            <Setter Property="VerticalContentAlignment" Value="Bottom"/>
+                            <Setter Property="HorizontalContentAlignment" Value="Center"/>
                         </Style>
                     </DataGrid.RowHeaderStyle>
                 </DataGrid>
@@ -164,12 +185,17 @@
                     <DataGrid.ColumnHeaderStyle>
                         <Style TargetType="Control">
                             <Setter Property="FontWeight" Value="Bold"/>
+                            <Setter Property="VerticalContentAlignment" Value="Bottom"/>
+                            <Setter Property="HorizontalContentAlignment" Value="Center"/>
                         </Style>
                     </DataGrid.ColumnHeaderStyle>
                     <DataGrid.RowHeaderStyle>
                         <Style TargetType="{x:Type DataGridRowHeader}">
                             <Setter Property="Content" Value="{Binding Path=Label, Converter={StaticResource PolinomToXamlConverter}}" />
                             <Setter Property="FontWeight" Value="Bold"/>
+                            <Setter Property="VerticalContentAlignment" Value="Bottom"/>
+                            <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                            <Setter Property="HorizontalAlignment" Value="Center"/>
                         </Style>
                     </DataGrid.RowHeaderStyle>
                 </DataGrid>
