--- a/ProjektLab/Polinom.xaml
+++ b/ProjektLab/Polinom.xaml
@@ -21,11 +21,11 @@
             <RowDefinition Height="auto"></RowDefinition>
             <RowDefinition Height="auto"></RowDefinition>
             <RowDefinition Height="auto"></RowDefinition>
-            <RowDefinition Height="auto" MinHeight="65"></RowDefinition>
-            <RowDefinition Height="auto" MinHeight="65"></RowDefinition>
-            <RowDefinition Height="auto" MinHeight="65"></RowDefinition>
-            <RowDefinition Height="auto" MinHeight="65"></RowDefinition>
-            <RowDefinition Height="auto" MinHeight="65"></RowDefinition>
+            <RowDefinition Height="65"></RowDefinition>
+            <RowDefinition Height="65"></RowDefinition>
+            <RowDefinition Height="65"></RowDefinition>
+            <RowDefinition Height="65"></RowDefinition>
+            <RowDefinition Height="65"></RowDefinition>
         </Grid.RowDefinitions>
         <TextBlock Text="Adjon meg egy Polinomot" FontWeight="Bold" Foreground="Black" Background="White" Grid.Row="0" Grid.ColumnSpan="2"/>
         <TextBlock x:Name="tbkPolinom" Grid.ColumnSpan="5" Grid.Column="2"/>
@@ -33,7 +33,7 @@
         <TextBlock Text="Modulo" Grid.Row="2"></TextBlock>
         <TextBlock Name="tbkMod" Grid.Row="2" Grid.Column="1"></TextBlock>
         <TextBlock Name="tbkPol1" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Grid.RowSpan="5"/>
-        <ListBox Name="lbLog" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Grid.RowSpan="5"/>
+        <ListBox Name="lbLog" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Grid.RowSpan="5" ScrollViewer.VerticalScrollBarVisibility="Visible" />
         <Button Grid.Column="2" Grid.Row="4" Name="btnClipboard" Click="btnclipBoard_Click" ToolTip="Polinom a vágólapról">
             <StackPanel>
                 <Image Source="clipboard.png"></Image>
@@ -44,8 +44,8 @@
                 <Image Source="floppy.png"></Image>
             </StackPanel>
         </Button>
-        <Button Content="CE" Grid.Column="3" Grid.Row="3" FontFamily="Times New Roman" FontSize="22" FontWeight="Bold"></Button>
-        <Button Content="C" Grid.Column="4" Grid.Row="3" FontFamily="Times New Roman" FontSize="22"></Button>
+        <Button Content="CE" Grid.Column="3" Grid.Row="3" FontFamily="Times New Roman" Click="btnCE_click" FontSize="22" FontWeight="Bold"></Button>
+        <Button Content="C" Grid.Column="4" Grid.Row="3" FontFamily="Times New Roman" FontSize="22" Click="btnC_click" ></Button>
         <Button Content="BKSP" Grid.Column="5" Grid.Row="3" FontFamily="Times New Roman" FontSize="22"></Button>
         <Button Content="%" Grid.Column="6" Grid.Row="3" FontFamily="Times New Roman" FontSize="22" Click="btnFunct_click"></Button>
         <Button Content="/" Grid.Column="7" Grid.Row="3" FontFamily="Times New Roman" FontSize="22" Click="btnFunct_click"></Button>
